--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile": "webpack",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +14,9 @@
     "babel-loader": "^6.2.9",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "webpack": "^1.14.0"
+    "express": "^4.14.0",
+    "webpack": "^1.14.0",
+    "webpack-dev-middleware": "^1.8.4"
   },
   "repository": {
     "type": "git",
